add notifier and scheduler for server